--- a/index.html
+++ b/index.html
@@ -103,12 +103,18 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span><a href="https://gpjalgaon.org.in/" target="_blank">Government Polytechnic Jalgaon</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Pragati Madhyamik Shala Jalgaon</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Work Experience:</strong> <span><a href="https://softanic.in/" target="_blank">Web Intern At Softanic Pvt.Ltd</a><br></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Diploma:</strong> <span><a href="https://gpjalgaon.org.in/" target="_blank">Government Polytechnic Jalgaon</a></span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>School:</strong> <span>Pragati Madhyamik Shala Jalgaon</span></li>
+                    <li>
+                        <i class="bi bi-chevron-right"></i> <strong>Work Experience:</strong>
+                        <span class="work-experience">
+                            Web Developer intern at <a href="https://softanic.in/" target="_blank">Softanic Pvt. Ltd</a><br>
+                            App Developer & Research intern at <a href="https://diat.ac.in/" target="_blank">DIAT-DRDO</a>
+                        </span>
+                    </li>
                 </ul>
-              </div>
+            </div>          
             </div>    
           </div>
         </div>
@@ -345,6 +351,7 @@
           </div>
           <!-- end card -->
         </div>
+        
         <div class="col-xxl-3 col-sm-6 project-card" style="margin-bottom: 20px;">
           <div class="card card-height-100">
             <div class="card-body">
@@ -368,6 +375,42 @@
                   4.Video Calling: Initiate video calls using ZegoCloud SDK.<br>
                   5.Profile Management: Update profile information and images.<br>
                   6.Logout: Easily log out and return to login.<br>
+                </p>
+              </div>
+            </div>
+            <!-- end card body -->
+            <div class="card-footer bg-transparent border-top-dashed py-2">
+              <div class="d-flex align-items-center justify-content-center"> <!-- Center the button -->
+                <div class="avatar-group">
+                  <a href="javascript: void(0);" class="avatar-group-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="" data-bs-original-title="Add Members">
+                    <div class="avatar-xxs">
+                      <a href="https://github.com/Chinmayk12/Connectify"><button type="button" class="btn btn-success waves-effect waves-light">Github ↗</button></a> 
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- end card footer -->
+          </div>
+          <!-- end card -->
+        </div>
+
+        <div class="col-xxl-3 col-sm-6 project-card" style="margin-bottom: 20px;">
+          <div class="card card-height-100">
+            <div class="card-body">
+              <div class="d-flex flex-column h-100">
+                <div class="d-flex">
+                  <div class="flex-grow-1" style="text-align: center;">
+                    <p><strong>ARISE App</strong></p>
+                  </div>
+                </div>
+                <div class="d-flex mb-2">
+                  <img src="assets/img/arise-app.jpeg" alt="Image Description" class="img-fluid mb-4 border border-dark" style="height: 135px; width: 250px;">
+                </div>
+                
+                <!-- Add a section for image description below the image -->
+                <p class="mb-4">
+                  ARISE is an app for the Technology Management Department at DIAT-DRDO, enhancing daily operations through improved security and efficiency. Key features include document organization for various sections, achievement tracking for students, and access to critical departmental information. The app ensures data confidentiality with advanced security measures and offers an intuitive interface that streamlines workflows and boosts productivity.
                 </p>
               </div>
             </div>
@@ -411,7 +454,7 @@
                                 <p class="mb-4">
                                     <strong>HealthEase - Hackathon Winning App</strong>
                                     <br>
-                                    Team AppCoders, consisting of Jayesh Patil, Gaurav Masand, Kalpesh Sananse, and myself, won our first hackathon at <a href="https://engg.dypvp.edu.in/" target="_blank">Dr. D. Y. Patil Institute of Technology, Pimpri, Pune.</a> HealthEase is a comprehensive healthcare app that connects users with top doctors, offers ambulance assistance, and enables online medicine purchases. The app streamlines appointment scheduling, reducing waiting times. This project showcased our passion for app development and the power of teamwork among like-minded individuals.
+                                    Team AppCoders, consisting of Jayesh Patil, Gaurav Masand, Kalpesh Sananse, and myself, won our first hackathon and secured 1st prize at <a href="https://engg.dypvp.edu.in/" target="_blank">Dr. D. Y. Patil Institute of Technology, Pimpri, Pune.</a> HealthEase is a comprehensive healthcare app that connects users with top doctors, offers ambulance assistance, and enables online medicine purchases. The app streamlines appointment scheduling, reducing waiting times. This project showcased our passion for app development and the power of teamwork among like-minded individuals.
                                 </p>
                             </div>
                         </div>
@@ -435,7 +478,7 @@
                             <div class="d-flex flex-column h-100">
                                 <div class="d-flex">
                                     <div class="flex-grow-1" style="text-align: center;">
-                                        <p><strong>Codeathon Winner</strong></p>
+                                        <p><strong>Codeathon Hackathon Winner</strong></p>
                                     </div>
                                 </div>
                                 <div class="d-flex mb-2">
@@ -461,6 +504,103 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xxl-6 col-sm-12 project-card" style="margin-bottom: 20px;">
+                  <div class="card card-height-100">
+                      <div class="card-body">
+                          <div class="d-flex flex-column h-100">
+                              <div class="d-flex">
+                                  <div class="flex-grow-1" style="text-align: center;">
+                                      <p><strong>Silicon Fusion Hackathon Winnner</strong></p>
+                                  </div>
+                              </div>
+                              <div class="d-flex mb-2">
+                                  <img src="assets/img/aissms-winner.jpeg" alt="Image Description" class="img-fluid mb-4 border border-dark" style="height: 400px; width: 100%;">
+                              </div>
+                              <p class="mb-4">
+                                  <strong>Secured 1st Place at AISSMS College of Engineering, Pune Hackathon</strong>
+                                  <br>
+                                  Team AppCoders (Jayesh Patil, Gaurav Masand, Kalpesh Sananse, and myself) achieved a significant milestone by winning 1st place at the Hackathon hosted by <a href="https://aissmscoe.com/" target="_blank">AISSMS College of Engineering, Pune.</a>  We developed the DPSI Avishkar App, an innovative e-learning platform that provides students with seamless access to well-structured courses, live classes, and recorded sessions.
+                                  This app encompasses three dedicated applications: Admin, Teacher, and Student, forming a smart education ecosystem. Teachers can add and manage courses, upload notes, and conduct live lectures. Students can view and purchase courses, access learning materials, and create accounts. Additionally, they can communicate with their mentors for personalized guidance. Our solution aims to enhance the overall learning experience and foster interactive, flexible education.
+                              </p>
+                          </div>
+                      </div>
+                      <div class="card-footer bg-transparent border-top-dashed py-2">
+                          <div class="d-flex align-items-center justify-content-center">
+                              <div class="avatar-group">
+                                  <a href="javascript: void(0);" class="avatar-group-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="" data-bs-original-title="Add Members">
+                                      <div class="avatar-xxs">
+                                          <a href="https://www.linkedin.com/posts/chinmay-karodpati_appcoders-teamappcoders-hackathonwinner-activity-7246216950727528448-CF0u/?utm_source=share&utm_medium=member_desktop"><button type="button" class="btn btn-success waves-effect waves-light">LinkedIn ↗</button></a>
+                                      </div>
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-xxl-6 col-sm-12 project-card" style="margin-bottom: 20px;">
+                <div class="card card-height-100">
+                    <div class="card-body">
+                        <div class="d-flex flex-column h-100">
+                            <div class="d-flex">
+                                <div class="flex-grow-1" style="text-align: center;">
+                                    <p><strong>Code The Cosmos Hackathon Winnner</strong></p>
+                                </div>
+                            </div>
+                            <div class="d-flex mb-2">
+                                <img src="assets/img/vcet-winner.jpeg" alt="Image Description" class="img-fluid mb-4 border border-dark" style="height: 400px; width: 100%;">
+                            </div>
+                            <p class="mb-4">
+                                <strong>Secured 3rd Place at Vidyavardhini's College of Engineering and Technology,Mumbai Hackathon</strong>
+                                <br>
+                                Team ByteSmashers (Gaurav Masand, Jayesh Patil, Kalpesh Sananse, and myself) achieved a notable milestone by securing 3rd place at the 30-hour Hackathon organized by <a href="https://vcet.edu.in/" target="_blank">Vidyavardhini's College of Engineering and Technology (VCET).</a> We developed a versatile custom authentication service featuring a three-factor security system with email, phone OTP, and fingerprint authentication, designed to provide secure access across mobile, web, and desktop platforms. Despite significant technical challenges, our resilience and teamwork led to the creation of a solution that enhances security and user experience, solidifying our position among competitive teams.  
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card-footer bg-transparent border-top-dashed py-2">
+                        <div class="d-flex align-items-center justify-content-center">
+                            <div class="avatar-group">
+                                <a href="javascript: void(0);" class="avatar-group-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="" data-bs-original-title="Add Members">
+                                    <div class="avatar-xxs">
+                                        <a href="https://www.linkedin.com/posts/chinmay-karodpati_bytesmashers-hackathon-authentication-activity-7249346812594012160-c-x1?utm_source=share&utm_medium=member_desktop"><button type="button" class="btn btn-success waves-effect waves-light">LinkedIn ↗</button></a>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xxl-6 col-sm-12 project-card" style="margin-bottom: 20px;">
+              <div class="card card-height-100">
+                  <div class="card-body">
+                      <div class="d-flex flex-column h-100">
+                          <div class="d-flex">
+                              <div class="flex-grow-1" style="text-align: center;">
+                                  <p><strong>MindSpark'24 Hackathon Winnner</strong></p>
+                              </div>
+                          </div>
+                          <div class="d-flex mb-2">
+                              <img src="assets/img/coep-winner.jpeg" alt="Image Description" class="img-fluid mb-4 border border-dark" style="height: 400px; width: 100%;">
+                          </div>
+                          <p class="mb-4">
+                              <strong>Secured 1st Place at College of Engineering Pune, Hackathon</strong>
+                              <br>
+                              Team ByteSmashers (Gaurav Masand, Jayesh Patil, Kalpesh Sananse, and myself) achieved a notable milestone by securing 3rd place at the 30-hour Hackathon organized by <a href="https://vcet.edu.in/" target="_blank">Vidyavardhini's College of Engineering and Technology (VCET).</a> We developed a versatile custom authentication service featuring a three-factor security system with email, phone OTP, and fingerprint authentication, designed to provide secure access across mobile, web, and desktop platforms. Despite significant technical challenges, our resilience and teamwork led to the creation of a solution that enhances security and user experience, solidifying our position among competitive teams.  
+                          </p>
+                      </div>
+                  </div>
+                  <div class="card-footer bg-transparent border-top-dashed py-2">
+                      <div class="d-flex align-items-center justify-content-center">
+                          <div class="avatar-group">
+                              <a href="javascript: void(0);" class="avatar-group-item" data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-placement="top" title="" data-bs-original-title="Add Members">
+                                  <div class="avatar-xxs">
+                                      <a href="https://www.linkedin.com/posts/chinmay-karodpati_neuralbyte-hackathon-innovation-activity-7255675202041208835-R8i9?utm_source=share&utm_medium=member_desktop"><button type="button" class="btn btn-success waves-effect waves-light">LinkedIn ↗</button></a>
+                                  </div>
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
                 <!-- End Duplicate Card -->
             </div>
         </div>
