--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Chinmay Pravin Karodpati</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>karodpatichinmay12@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8010944027</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jalgaon , Maharashtra</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune , Maharashtra</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
